# mytree

./: README.md  pyproject.toml
api/: README.md  app.py
api/routes/: README.md  metrics.py  query.py
api/schemas/: README.md  query.py
docs/: architecture.md  module_map.md
experiments/configs/: README.md
kg/: README.md
kg/graph_build/: README.md  __init__.py  cli.py  materials_ontology.py  visualization.py
mcp/: README.md  server.py
mcp/tools/: README.md  graph_tool.py  retrieve_tool.py
tests/: test_health.py  test_materials_graph.py  test_mcp_tools.py
utility/image_reader/: __init__.py  cli.py
